--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: python
 services:
-  - sqlite
+  - sqlite3
 env:
-  - DJANGO=2.2 DB=sqlite
+  - DJANGO=2.2 DB=sqlite3
 install:
   - python -m pip install Django
-before_script:
-  - sqlite -e 'create database test;' -u root
 script:
   - python manage.py test
