--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 services:
   - sqlite3
 env:
-  - DJANGO=2.2 DB=sqlite3
+  - DJANGO=2.2 DB=sqlite
 install:
+  - python -m pip install -q . --use-mirrors
   - python -m pip install Django
 before_script:
   - cd TNI_Project
