--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   - DJANGO=2.2 DB=sqlite
 install:
   - python -m pip install Django
+  - python -m pip install Pillow
 before_script:
   - cd TNI_Project
 script:
