--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ env:
 install:
   - python -m pip install Django
   - python -m pip install Pillow
+before_script:
+  - cd TNI_Project
 script:
-  - pytest
+  - python manage.py test
