--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 env:
   - DJANGO=2.2 DB=sqlite
 install:
-  - python -m pip install Django
-  - python -m pip install Pillow
+  - python -m pip install -r requirements.txt
 before_script:
   - cd TNI_Project
 script:
